# 3DSlicer_Extension

./: .gitignore  README.md
temporal_bone_volume_cropping/: CMakeLists.txt
temporal_bone_volume_cropping/CropTBVolume/: CMakeLists.txt  CropTBVolume.py
temporal_bone_volume_cropping/CropTBVolume/Resources/UI/: CropTBVolume.ui
